--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Makovec
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -9,10 +9,10 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mariadb
 DB_PORT=3306
-DB_DATABASE=makovec_laravel
-DB_USERNAME=root
+DB_DATABASE=makovec
+DB_USERNAME=sail
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
